[gd_scene load_steps=2 format=2]

[ext_resource path="res://Business.gd" type="Script" id=1]

[node name="Business" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = -2.0
margin_right = -795.0
margin_bottom = -452.0
rect_min_size = Vector2( 0, 150 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 218.0
margin_bottom = 661.0

[node name="NameLabel" type="Label" parent="VBox"]
margin_right = 211.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "[Business Name]"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_top = 24.0
margin_right = 211.0
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumShopsLabel" type="Label" parent="VBox/HBox"]
margin_right = 46.0
margin_bottom = 14.0
text = "Shops: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumShops" type="Label" parent="VBox/HBox"]
margin_left = 50.0
margin_right = 66.0
margin_bottom = 14.0
text = "[0]"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox2" type="HBoxContainer" parent="VBox"]
margin_top = 42.0
margin_right = 211.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopCostLabel" type="Label" parent="VBox/HBox2"]
margin_right = 71.0
margin_bottom = 14.0
text = "Shop Cost: "

[node name="ShopCost" type="Label" parent="VBox/HBox2"]
margin_left = 75.0
margin_right = 91.0
margin_bottom = 14.0
text = "[0]"

[node name="HBox3" type="HBoxContainer" parent="VBox"]
margin_top = 60.0
margin_right = 211.0
margin_bottom = 74.0

[node name="RevenueLabel" type="Label" parent="VBox/HBox3"]
margin_right = 63.0
margin_bottom = 14.0
text = "Revenue: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Revenue" type="Label" parent="VBox/HBox3"]
margin_left = 67.0
margin_right = 83.0
margin_bottom = 14.0
text = "[0]"

[node name="BuyShops" type="Button" parent="VBox"]
margin_top = 78.0
margin_right = 211.0
margin_bottom = 98.0
text = "Buy Shop"

[node name="Produce" type="Button" parent="VBox"]
margin_top = 102.0
margin_right = 211.0
margin_bottom = 122.0
text = "Produce"

[node name="ProductionProgress" type="ProgressBar" parent="VBox"]
margin_top = 126.0
margin_right = 211.0
margin_bottom = 146.0
rect_min_size = Vector2( 0, 20 )
value = 17.4
percent_visible = false

[node name="Label" type="Label" parent="VBox/ProductionProgress"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "0/1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
